testing simpler setup